--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme_Modify">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -33,7 +33,7 @@
         <activity
             android:name=".settings.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:theme="@style/SettingsTheme" />
+            android:theme="@style/SettingsTheme_Modify" />
         <activity
             android:name=".schedule.ScheduleActivity"
             android:label="@string/title_activity_schedule" />
